--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -52,7 +52,9 @@
     "webfontloader": "1.6.28",
     "webpack-merge": "4.1.1",
     "axios": "^0.17.1",
-    "querystring": "^0.2.0"
+    "querystring": "^0.2.0",
+    "jest": "^22.1.2",
+    "vue-test-utils":"^1.0.0-beta.11"
   },
   "dependencies": {}
 }
