--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -5,56 +5,58 @@
   "devDependencies": {
     "aspnet-prerendering": "3.0.1",
     "aspnet-webpack": "^2.0.1",
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.1.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-imports": "^1.4.1",
-    "babel-preset-es2015": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "css-loader": "^0.28.7",
+    "babel-preset-es2015": "^6.24.1",
+    "clean-webpack-plugin": "0.1.17",
+    "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
+    "file-loader": "^1.1.6",
     "image-webpack-loader": "3.4.2",
+    "jest": "^22.1.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "lodash": "^4.17.4",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "purify-css": "1.2.6",
+    "purifycss-webpack": "0.7.0",
+    "querystring": "^0.2.0",
     "style-loader": "^0.19.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "url-loader": "^0.6.2",
     "v-debounce": "^0.1.2",
     "vue": "2.5.13",
-    "vue-server-renderer": "2.5.13",
     "vue-adsense": "^1.0.1",
+    "vue-analytics": "^5.5.0",
     "vue-avatar-component": "^1.2.4",
+    "vue-lazyload": "^1.1.4",
     "vue-loader": "^13.3.0",
     "vue-router": "^3.0.1",
+    "vue-scrollto": "2.8.0",
+    "vue-server-renderer": "2.5.13",
     "vue-star-rating": "^1.5.0",
     "vue-svg-loader": "^0.3.0",
     "vue-template-compiler": "2.5.13",
-    "vue-scrollto": "2.8.0",
+    "vue-test-utils": "^1.0.0-beta.11",
     "vuetify": "^0.17.3",
     "vuetify-loader": "^0.1.1",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.1.2",
-    "vue-analytics": "^5.5.0",
-    "webpack": "^3.8.1",
-    "webpack-hot-middleware": "^2.20.0",
-    "webpack-visualizer-plugin": "0.1.11",
-    "webpack-stats-plugin": "0.1.5",
-    "clean-webpack-plugin": "0.1.17",
-    "vue-lazyload": "^1.1.4",
-    "webfonts-loader": "4.0.1",
-    "purifycss-webpack": "0.7.0",
-    "purify-css": "1.2.6",
     "webfontloader": "1.6.28",
+    "webfonts-loader": "4.0.1",
+    "webpack": "^3.10.0",
+    "webpack-hot-middleware": "^2.20.0",
     "webpack-merge": "4.1.1",
-    "axios": "^0.17.1",
-    "querystring": "^0.2.0",
-    "jest": "^22.1.2",
-    "vue-test-utils":"^1.0.0-beta.11"
+    "webpack-stats-plugin": "0.1.5",
+    "webpack-visualizer-plugin": "0.1.11",
+    "@types/jest":"^22.0.1"
   },
   "dependencies": {}
 }
