--- a/Zbang.Zbox.WorkerRoleSearch/app.config
+++ b/Zbang.Zbox.WorkerRoleSearch/app.config
@@ -43,6 +43,10 @@
     <gcServer enabled="true"/>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
+				<assemblyIdentity name="SendGrid" publicKeyToken="4F047E93159395CA" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-9.8.0.0" newVersion="9.8.0.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
 				<assemblyIdentity name="System.Reflection.Extensions" publicKeyToken="B03F5F7F11D50A3A" culture="neutral"/>
 				<bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0"/>
 			</dependentAssembly>
@@ -372,4 +376,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup></configuration>
