--- a/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
+++ b/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Mail\MailProvider.cs" />
     <Compile Remove="Search\CseSearch.cs" />
     <Compile Remove="Search\TitleSearch.cs" />
   </ItemGroup>
@@ -34,13 +35,16 @@
     <PackageReference Include="Microsoft.Azure.Search" Version="4.0.1-preview" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0" />
-    <PackageReference Include="Sendgrid" Version="9.9.0" />
-    <PackageReference Include="Spitball.Luis" Version="1.1.2" />
+    <PackageReference Include="Spitball.Luis" Version="1.1.3" />
     <PackageReference Include="WindowsAzure.Storage" Version="8.7.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Cloudents.Core\Cloudents.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Mail\" />
   </ItemGroup>
 
 </Project>
