--- a/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
+++ b/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="Microsoft.Azure.Search" Version="4.0.1-preview" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Rest.ClientRuntime.Azure" Version="3.3.10" />
     <PackageReference Include="Spitball.Luis" Version="1.1.3" />
     <PackageReference Include="WindowsAzure.Storage" Version="8.7.0" />
   </ItemGroup>
