--- a/Zbang.Zbox.Infrastructure.Mail/packages.config
+++ b/Zbang.Zbox.Infrastructure.Mail/packages.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.6.1" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="RestSharp" version="105.2.3" targetFramework="net451" requireReinstallation="true" />
-  <package id="Sendgrid" version="6.3.4" targetFramework="net451" />
-  <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net451" />
+  <package id="Sendgrid" version="9.9.0" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.0.0" targetFramework="net462" />
 </packages>
