--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -58,7 +58,21 @@
     "axios": "^0.17.1",
     "query-string": "^5.0.1",
     "jest": "^22.1.4",
-    "@types/jest": "^22.0.1"
+    "@types/jest": "^22.0.1",
+    "jest-vue-preprocessor": "^1.3.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^vue$": "vue/dist/vue.common.js"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "vue"
+    ],
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
+      ".*\\.(vue)$": "<rootDir>/node_modules/jest-vue-preprocessor"
+    }
   },
   "dependencies": {}
 }
